--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>1. นายจิตติพัฒน์ ลิ้มสกุล เลขที่ 6</p>
             <p>2. นายปัณณวิชญ์ ลิ้มฐิติศักดิ์ เลขที่ 15</p>
             <p>3. นายสรวิชญ์ คุ้มพงษ์พันธ์ เลขที่ 26</p>
-            <p>4. นางสาวฐิตินันทสุขวัน เลขที่ 33</p>
+            <p>4. นางสาวฐิตินัน สุขวัน เลขที่ 33</p>
             <p>5. นางสาวพรนภัทร เหล่าสิม เลขที่ 35</p>
             <body>
                 <a href="#" onclick="openหน้าหลัก()">ขึ้นไปข้างบน</a>
